attempting handlebars, not working. Fixed footer aligned with body now.

--- a/css/base.css
+++ b/css/base.css
@@ -11,6 +11,7 @@ body {
 
 main {
 box-shadow: 0 4px 2px -2px gray;
+padding-bottom: 15%
 
 }
 
